@@ -3,6 +3,7 @@ Changelog for GEMC
 
 2/24/17
  - added surface area, volume and mass information in the detector log if verbosity is high enough
+ - added surface area, volume and mass information in the detector gui tab
 
 2/22/17
  - added option ION_P:
